--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "COLOCAR SUA CONNECTION STRING AQUI"
+    "ConexaoPadrao": "Server=localhost\\SqlExpress; Initial Catalog=Agenda; Integrated Security=True;TrustServerCertificate=True"
   }
 }
